--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-
+android:layout_marginBottom="50dp"
         android:layout_marginEnd="40dp"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
@@ -31,23 +31,26 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginBottom="60dp"
         android:layout_marginEnd="60dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/input_field"
+        android:capitalize="none"
         android:ems="10"
         android:fontFamily="@font/my_written"
-        android:letterSpacing="0.1"
-        android:textColorHint="#686868"
-        android:hint="Email"
-        android:textSize="20dp"
         android:gravity="center_vertical|left"
-        android:paddingBottom="4dp"
-        android:paddingLeft="5dp"
+        android:hint="Email"
         android:inputType="textEmailAddress"
+        android:letterSpacing="0.1"
+        android:minHeight="48dp"
+        android:paddingLeft="5dp"
+        android:paddingBottom="4dp"
+        android:textColorHint="#686868"
+        android:textSize="20dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/reg_text_nickname_field"
@@ -62,6 +65,7 @@
         android:letterSpacing="0.1"
         android:textColorHint="#686868"
         android:hint="Nickname"
+        android:minHeight="48dp"
         android:textSize="20dp"
         android:gravity="center_vertical|left"
         android:paddingBottom="4dp"
@@ -82,6 +86,7 @@
         android:layout_marginEnd="60dp"
         android:background="@drawable/input_field"
         android:ems="10"
+        android:minHeight="48dp"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:textColorHint="#686868"
@@ -106,6 +111,7 @@
         android:layout_marginEnd="60dp"
         android:background="@drawable/input_field"
         android:ems="10"
+        android:minHeight="48dp"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:textColorHint="#686868"
@@ -126,53 +132,56 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="60dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/input_field"
-        android:fontFamily="@font/my_written"
-        android:letterSpacing="0.1"
-        android:textColorHint="#686868"
         android:ems="10"
-        android:hint="Password"
-        android:textSize="20dp"
+        android:fontFamily="@font/my_written"
         android:gravity="center_vertical|left"
-        android:paddingBottom="4dp"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:letterSpacing="0.1"
+        android:minHeight="48dp"
+        android:paddingBottom="4dp"
+        android:textColorHint="#686868"
+        android:textSize="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/reg_text_password_repeat_field"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toBottomOf="@id/reg_text_greeting" />
 
     <EditText
         android:id="@+id/reg_text_password_repeat_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginBottom="60dp"
         android:layout_marginEnd="60dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
-        android:fontFamily="@font/my_written"
-        android:letterSpacing="0.1"
-        android:textColorHint="#686868"
         android:ems="10"
-        android:hint="Repeat your password"
-        android:textSize="20dp"
+        android:fontFamily="@font/my_written"
         android:gravity="center_vertical|left"
-        android:paddingBottom="4dp"
+        android:hint="Repeat your password"
         android:inputType="textPassword"
+        android:letterSpacing="0.1"
+        android:minHeight="48dp"
+        android:paddingBottom="4dp"
+        android:textColorHint="#686868"
+        android:textSize="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/reg_registration_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toBottomOf="@id/reg_text_password_field" />
 
     <Button
         android:id="@+id/reg_registration_btn"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="250dp"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:text="next"
