--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:layout_marginEnd="60dp"
         android:background="@drawable/input_field"
         android:ems="10"
+        android:minHeight="48dp"
         android:fontFamily="@font/my_written"
         android:textColorHint="#686868"
         android:letterSpacing="0.1"
@@ -59,6 +60,7 @@
         android:letterSpacing="0.1"
         android:textColorHint="#686868"
         android:ems="10"
+        android:minHeight="48dp"
         android:hint="Password"
         android:textSize="20dp"
         android:gravity="center_vertical|left"
@@ -82,10 +84,10 @@
         android:fontFamily="@font/my_written"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.749" />
+        app:layout_constraintVertical_bias="0.65" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/main_reg_btn"
@@ -93,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign up"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:paddingTop="2dp"
         android:paddingBottom="4dp"
         android:paddingLeft="10dp"
