--- a/app/src/main/res/layout/fragment_current_day.xml
+++ b/app/src/main/res/layout/fragment_current_day.xml
@@ -11,7 +11,8 @@
         android:id="@+id/cur_day_constraint_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal|top">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cur_btn_day"
@@ -19,6 +20,7 @@
             android:layout_height="140dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
+
             android:background ="@drawable/rounded_day"
 
             android:fontFamily="@font/indie_flower"
@@ -45,31 +47,19 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id = "@+id/cur_day_constraint_checkers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:layout_marginLeft="70dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginRight="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cur_day_constraint_btn">
 
-        <Button
-            android:id="@+id/cur_day_save_btn"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/indie_flower"
-            android:gravity="center_horizontal"
-            android:text="Save"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="32dp"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cur_day_constraint_diary" />
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cur_day_constraint_interest"
@@ -87,6 +77,7 @@
                 android:checked="false"
                 android:text=""
                 android:thumb="@drawable/thumb_interest"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:track="@drawable/track_interest" />
@@ -95,12 +86,12 @@
                 android:id="@+id/cur_day_interest_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/indie_flower"
                 android:text="Interesting"
                 android:textColor="@color/black"
                 android:textSize="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cur_day_switch_interest"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -108,34 +99,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cur_day_constraint_diary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="70dp"
-            android:padding="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cur_day_constraint_productive"
-            tools:visibility="visible">
 
-            <EditText
-                android:id="@+id/cur_et_day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal|bottom"
-                android:hint="Write little note"
-                android:minHeight="48dp"
-                android:paddingBottom="2dp"
-                android:textSize="24dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:inputType="textMultiLine"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cur_day_constraint_productive"
@@ -153,6 +117,7 @@
                 android:checked="false"
                 android:text=""
                 android:thumb="@drawable/thumb_productive"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:track="@drawable/track_productive" />
@@ -161,12 +126,12 @@
                 android:id="@+id/cur_day_productive_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:fontFamily="@font/indie_flower"
                 android:text="Productive"
                 android:textColor="@color/black"
                 android:textSize="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cur_day_switch_productive"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -189,6 +154,7 @@
                 android:checked="false"
                 android:text=""
                 android:thumb="@drawable/thumb_ordinary"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:track="@drawable/track_ordinary" />
@@ -197,12 +163,12 @@
                 android:id="@+id/cur_day_ordinary_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="18dp"
                 android:fontFamily="@font/indie_flower"
                 android:text="Ordinary "
                 android:textColor="@color/black"
                 android:textSize="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cur_day_switch_ordinary"
                 app:layout_constraintHorizontal_bias="0.52"
                 app:layout_constraintStart_toStartOf="parent"
@@ -211,6 +177,57 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cur_day_constraint_diary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="150dp"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cur_day_constraint_checkers"
+        tools:visibility="visible">
+
+        <EditText
+            android:id="@+id/cur_et_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="20dp"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal|bottom"
+            android:hint="Write little note"
+            android:inputType="textMultiLine"
+            android:maxHeight="100dp"
+            android:minHeight="48dp"
+            android:paddingBottom="2dp"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/cur_day_save_btn"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Save"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="32dp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cur_et_day" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </FrameLayout>
